syntax="proto3";
import "protos/ChoicePoint.proto";
import "protos/Label.proto";

message DataPoint {
    ChoicePoint choicepoint = 1;
    Label label = 2;
}
