syntax="proto3";

message Label {
    int32 choiceIdx  = 1;
}
